-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
5.4.0
-
None
-
Linux Debian Jessie i686.
Qt Creator 3.3.0
-
afb52763aa759b3b60be2816212af04d0063595c
Hi,
It seems that in some cases, QUrl::​topLevelDomain returns a wrong top level domain.
Here's a sample file (console project)
main.cpp
#include <QCoreApplication> #include <QUrl> #include <QDebug> int main(int argc, char *argv[]) { QCoreApplication a(argc, argv); QString url("http://www.homeip.net"); QUrl qUrl(url); qDebug() << "Not working : wrong tld returned"; qDebug() << "Url1 : " << url << "TLD : " << qUrl.topLevelDomain(); url = "http://www.blogspot.fr"; qUrl.setUrl(url); qDebug() << "Not working : wrong tld returned"; qDebug() << "Url2 : " << url << "TLD : " << qUrl.topLevelDomain(); url = "http://www.google.fr"; qUrl.setUrl(url); qDebug() << "Working sample"; qDebug() << "Url3 : " << url << "TLD : " << qUrl.topLevelDomain(); return a.exec(); }
| For Gerrit Dashboard: QTBUG-44390 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 105859,3 | Doc: clarify what QUrl::topLevelDomain actually does | 5.4 | qt/qtbase | Status: MERGED | +2 | 0 |